syntax = "proto3";

package service;

option go_package = "./proto/service";

message Hello{
  uint64 HelloID = 1;
  string Msg = 2;
  string SendTime = 3;
}

message HelloRequest{
  Hello hello = 1;
}

message HelloResponse{
  Hello Resp = 1;
  int64 Code = 2;
}

service HelloService{
  rpc SayHello(HelloRequest)returns(HelloResponse){}
}